-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.14
-
Component/s: Bootloader
-
Labels:
-
Environment:
XQEMU (Xbox emulator)
-
Module:
-
External URL:
-
Epic Link:
Since on Xbox we don't have BIOS interrupts, we have to implement all Disk I/O functions manually by talking to the Xbox IDE controller directly.
Xbox have just one IDE controller with primary HDD and slave DVD.
FreeLoader is missing support for ATAPI DVD-ROM drive which Xbox have. It could not read from it, so it does not allow to test bootcd or livecd ReactOS images.
See this portion of code:
Atapi = FALSE; /* FIXME */ |
Debug log and screenshot of XQEMU attached.
- blocks
-
CORE-16627 Random "Invalid Opcode" exceptions when running LiveCD in XQEMU
-
- Resolved
-
-
CORE-16628 FreeLoader doesn't detect DVD drive on real hardware Xbox
-
- Resolved
-